# Text_Converter_V1

./: README.md  resources_rc.py  string_to_tree.py  text_converter.py  text_converter_ui.py  text_converter_ui.ui
my_module_/: pyproject.toml
my_module_/src/sangdo_mod/: JAV_config.py  JAV_prod_code.py  Test01.py  ask_question.py  config.py  string_to_tree.py  time_stamp.py
